syntax = "proto3";
package side.incentive;

import "gogoproto/gogo.proto";
import "side/incentive/params.proto";

option go_package = "github.com/sideprotocol/side/x/incentive/types";

// GenesisState defines the incentive module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
